tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_errors@slice_step_zero.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&err"
input_file: tera/src/snapshot_tests/rendering_inputs/errors/slice_step_zero.txt
---
error: Slicing step cannot be 0
 --> slice_step_zero.txt:1:4
  |
1 | {{ numbers[0:2:0] }}
  |    ^^^^^^^
